# zk-ceaser

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  TECHNICAL.md  next.config.js  package.json  tsconfig.json
.github/assets/: meta-tags.html
generated-proofs/: ceaser-zk-proof-2025-09-29T12-42-44-637Z.json
proofs/: ceaser-zk-proof-2025-09-29T12-44-41-524Z.json  ceaser-zk-proof-valid-example.json
src/app/: layout.tsx  page.tsx
src/app/api/mixing/set-destination/: route.ts
src/app/api/mixing/status/: route.ts
src/app/api/proofs/save/: route.ts
src/components/: ZKPrivacyForm.tsx  ZKProofGenerator.tsx
src/components/mixing/: MixingForm.tsx
src/components/ui/: DebugPanel.tsx  Header.tsx
src/components/wallet/: WalletButton.tsx
src/hooks/: useStarknet.ts
src/lib/: constants.ts  wasmLoader.ts  zkProofUtils.ts  zkpMock.ts
src/providers/: StarknetProvider.tsx
src/types/: contracts.ts  wallet.ts
zkp-rust-backend/: Cargo.toml  README.md
zkp-rust-backend/patches/size-of-wasm/: Cargo.toml
zkp-rust-backend/patches/size-of-wasm/src/: lib.rs
zkp-rust-backend/src/: field_arithmetic.rs  lib.rs  merkle_tree.rs  zkp_generator.rs
zkp-rust-backend/src/legacy/: mod.rs  stwo_mock.rs
zkp-rust-backend/src/production/: mod.rs  stwo_real.rs
