[package]
name = "zkp-ceaser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ZK Libraries - arkworks ecosystem (versiones actualizadas 2025)
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-poly = "0.5.0"
ark-relations = "0.5.0"

# STWO PRINCIPAL - Repositorio core de StarkWare
# https://github.com/starkware-libs/stwo
stwo = { path = "../../external/stwo/crates/stwo", optional = true, features = ["prover"] }

# Crypto and utilities
sha3 = "0.10"
keccak = "0.1"
hex = "0.4"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use starknet-crypto for Poseidon (official Starknet implementation - 100% compatible with Cairo)
# CONFIGURACIÓN ESPECÍFICA PARA WASM: sin std, solo alloc
starknet-crypto = { version = "0.8", default-features = false, features = ["alloc"] }
# USAR LA MISMA VERSIÓN que starknet-crypto para evitar conflictos
starknet-types-core = { version = "0.2", default-features = false, features = ["alloc"] }

# WASM support
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Performance",
  "HtmlElement",
] }
console_error_panic_hook = "0.1"

# Math utilities
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.8"

# Features for conditional compilation
[features]
default = ["mock-stwo"]  # Por defecto mock para desarrollo
real-stwo = ["stwo"]
mock-stwo = []

# WASM optimization
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# Patch para resolver incompatibilidad de size-of con WASM
# SOLUCIÓN CRIPTOGRÁFICA: Reemplazar size-of con implementación WASM-compatible
[patch.crates-io]
size-of = { version = "0.1.5", path = "./patches/size-of-wasm" }
size-of = { version = "0.1.5", path = "./patches/size-of-wasm" }